chore: fix letter-spacing duplication

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -359,7 +359,7 @@ h1 {
 
     align-items: center;
     text-align: center;
-    letter-spacing: -0.02em;
+
     /* White */
     color: #FFFFFF;
     font-size: 1.125em;
